added fonts converter otToTtf, ttfToWoff,fontsStyle

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,11 @@
+@import 'fonts';
+
 body{
     background-color: black;
     span {
-        color: #FFFF;
+        font-family: CormorantUpright;
+        color: rgb(163, 22, 22);
+        font-size: 20px;
     }
     background:url('@img/qanew.png') 0 0 no-repeat;
 }
